fix alignment issue with flex

--- a/assets/scss/components/_text_and_image.scss
+++ b/assets/scss/components/_text_and_image.scss
@@ -562,11 +562,6 @@ section.section_text_and_image{
             grid-template-columns: 1fr 1fr;
             gap: 0.3rem;
 
-            
-
-            
-
-
 
             .text-col{
                 
@@ -817,7 +812,7 @@ section.section_text_and_image{
                 div.vertical-bars-container{
 
                     
-                    grid-area: 9 / 9 / span 3 / span 4;
+                    grid-area: 10 / 9 / span 2 / span 4;
                     width: 100%;
 
                     .vertical-bars-small{
